--- a/app/src/main/res/layout/started_routes.xml
+++ b/app/src/main/res/layout/started_routes.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:padding="10dp">
 
 
     <TextView
@@ -10,8 +11,9 @@
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:fontFamily="@font/magra"
+        android:fontFamily="@font/magra_bold"
         android:layout_gravity="center_horizontal"
+        android:textColor="@color/black"
         android:gravity="center"
         android:textSize="20sp"
         android:text="@string/startedRoutes"/>
@@ -21,7 +23,8 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="6"
-        android:padding="5dp"/>
+        android:paddingTop="15dp"
+        android:paddingBottom="10dp"/>
 
 
 </LinearLayout>
