--- a/app/src/main/res/layout/activity_fragment_profile.xml
+++ b/app/src/main/res/layout/activity_fragment_profile.xml
@@ -82,7 +82,7 @@
                         android:layout_marginBottom="5dp"
                         android:fontFamily="@font/magra_bold"
                         android:textColor="@color/black"
-                        android:text="Nº Discounts Used"/>
+                        android:text="@string/numberDiscountsUsed"/>
 
                     <TextView
                         android:id="@+id/profileNumberDiscounts"
@@ -107,7 +107,7 @@
                         android:layout_marginBottom="5dp"
                         android:fontFamily="@font/magra_bold"
                         android:textColor="@color/black"
-                        android:text="Nº Routes Finished"/>
+                        android:text="@string/numberRoutesFinished"/>
 
                     <TextView
                         android:id="@+id/profileNumberRoutes"
@@ -151,7 +151,7 @@
         <androidx.viewpager2.widget.ViewPager2
             android:id="@+id/viewpagerprofile"
             android:layout_width="match_parent"
-            android:layout_height="400dp"
+            android:layout_height="450dp"
             android:background="#00FFFFFF"
             android:fontFamily="@font/magra"/>
 
