--- a/app/src/main/res/layout/collaborator_profile_fragment.xml
+++ b/app/src/main/res/layout/collaborator_profile_fragment.xml
@@ -31,6 +31,8 @@
                 android:layout_marginBottom="10dp"
                 android:layout_weight="7"
                 android:textSize="20sp"
+                android:paddingLeft="5dp"
+                android:paddingRight="5dp"
                 android:textColor="@color/black"
                 android:fontFamily="@font/magra_bold"/>
 
