--- a/app/src/main/res/layout/discount_info.xml
+++ b/app/src/main/res/layout/discount_info.xml
@@ -29,6 +29,7 @@
             android:layout_width="match_parent"
             android:layout_height="120dp"
             android:paddingLeft="10dp"
+            android:paddingRight="10dp"
             android:layout_marginTop="10dp"
             android:textSize="16sp"
             android:fontFamily="@font/magra"/>
