--- a/app/src/main/res/layout/routes_clicked.xml
+++ b/app/src/main/res/layout/routes_clicked.xml
@@ -11,8 +11,8 @@
         android:id="@+id/routesClickedName"
         android:layout_width="match_parent"
         android:layout_height="67dp"
-        android:fontFamily="@font/magra"
         android:layout_marginTop="10dp"
+        android:fontFamily="@font/magra"
         android:gravity="center"
         android:textColor="#FFFFFF"
         android:textSize="20sp" />
@@ -21,8 +21,8 @@
         android:layout_width="match_parent"
         android:layout_height="70dp"
         android:layout_marginTop="20dp"
-        android:background="#796A5B5B"
         android:layout_marginBottom="30dp"
+        android:background="#796A5B5B"
         android:orientation="horizontal">
 
         <LinearLayout
@@ -35,10 +35,10 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:fontFamily="@font/magra"
                 android:gravity="center"
                 android:text="@string/category"
                 android:textAllCaps="true"
-                android:fontFamily="@font/magra"
                 android:textColor="@color/white"
                 android:textSize="16sp" />
 
@@ -46,9 +46,9 @@
                 android:id="@+id/routesClickedCategory"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@color/white"
                 android:fontFamily="@font/magra"
                 android:gravity="center"
+                android:textColor="@color/white"
                 android:textSize="16sp" />
 
         </LinearLayout>
@@ -70,9 +70,9 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:fontFamily="@font/magra"
                 android:gravity="center"
                 android:text="@string/numberStages"
-                android:fontFamily="@font/magra"
                 android:textColor="@color/white"
                 android:textSize="16sp" />
 
@@ -80,10 +80,10 @@
                 android:id="@+id/routesClickedNumberStages"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@color/white"
+                android:fontFamily="@font/magra"
                 android:gravity="center"
-                android:textSize="16sp"
-                android:fontFamily="@font/magra"/>
+                android:textColor="@color/white"
+                android:textSize="16sp" />
 
         </LinearLayout>
 
@@ -92,15 +92,74 @@
     <com.google.android.gms.maps.MapView
         android:id="@+id/routesClickedMap"
         android:layout_width="match_parent"
-        android:layout_height="300dp" />
+        android:layout_height="260dp" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/routesClickedStages"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="180dp"
         android:layout_marginTop="20dp"
         android:background="#796A5B5B"
         android:padding="5dp" />
+
+    <LinearLayout
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:layout_margin="15dp"
+        android:orientation="vertical">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_marginBottom="10dp"
+            android:layout_weight="1"
+            android:orientation="horizontal">
+
+            <View
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_marginRight="10dp"
+                android:layout_weight="1"
+                android:background="#E91E63" />
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="2"
+                android:padding="5dp"
+                android:text="@string/visited"
+                android:textAlignment="textStart"
+                android:textColor="@color/white"
+                android:textSize="14sp" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:orientation="horizontal">
+
+            <View
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_marginRight="10dp"
+                android:layout_weight="1"
+                android:background="#CDDC39" />
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="2"
+                android:textAlignment="textStart"
+                android:padding="5dp"
+                android:text="@string/notVisited"
+                android:textColor="@color/white"
+                android:textSize="14sp" />
+
+        </LinearLayout>
+
+    </LinearLayout>
 
 
 </LinearLayout>
