--- a/app/src/main/res/layout/routes_clicked_stations.xml
+++ b/app/src/main/res/layout/routes_clicked_stations.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/stationContainerInRouteDetail"
     android:layout_width="140dp"
     android:layout_height="180dp"
     android:layout_gravity="bottom"
@@ -12,8 +13,8 @@
         android:id="@+id/routesClickedStationImageView"
         android:layout_width="match_parent"
         android:layout_height="110dp"
-        android:scaleType="fitXY"
-        android:layout_marginBottom="8dp" />
+        android:layout_marginBottom="8dp"
+        android:scaleType="fitXY" />
 
 
     <TextView
@@ -22,8 +23,8 @@
         android:layout_height="60dp"
         android:layout_gravity="center_horizontal"
         android:background="#00FFFFFF"
-        android:textColor="#FFFFFF"
-        android:fontFamily="@font/magra_bold"/>
+        android:fontFamily="@font/magra_bold"
+        android:textColor="#FFFFFF" />
 
 
 </LinearLayout>
