--- a/app/src/main/res/layout/activity_faqs.xml
+++ b/app/src/main/res/layout/activity_faqs.xml
@@ -3,6 +3,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:layout_height="wrap_content">
+
+</LinearLayout>
+<!--
+
+
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center_horizontal"
     android:layout_margin="30dp"
@@ -93,4 +103,4 @@
         android:fontFamily="@font/magra" />
 
 
-</LinearLayout>
+</LinearLayout>-->
