--- a/app/src/main/res/layout/ad_template.xml
+++ b/app/src/main/res/layout/ad_template.xml
@@ -4,10 +4,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="164dp"
     android:layout_height="260dp"
-    android:backgroundTint="#80A0FD"
-    android:layout_marginBottom="20dp"
-    android:layout_marginRight="7dp"
     android:layout_marginLeft="5dp"
+    android:layout_marginRight="7dp"
+    android:layout_marginBottom="20dp"
+    android:backgroundTint="#A7BEFF"
     app:cardCornerRadius="15dp">
 
 
@@ -21,19 +21,20 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_marginBottom="5dp"
-            android:padding="5dp"
             android:layout_weight="3"
-            android:background="#FFFFFF">
+            android:background="#FFFFFF"
+            android:padding="5dp">
 
             <TextView
                 android:id="@+id/adTemplateTitle"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="8"
+                android:fontFamily="@font/magra_bold"
                 android:paddingRight="5dp"
                 android:textAlignment="textStart"
-                android:textSize="20sp"
-                android:fontFamily="@font/magra_bold" />
+                android:textColor="@color/black"
+                android:textSize="20sp" />
 
             <ImageView
                 android:id="@+id/adMoreOptions"
@@ -48,9 +49,9 @@
         <ImageView
             android:id="@+id/adTemplatePicture"
             android:layout_width="match_parent"
-            android:scaleType="fitCenter"
             android:layout_height="0dp"
-            android:layout_weight="5" />
+            android:layout_weight="5"
+            android:scaleType="fitCenter" />
 
         <TextView
             android:id="@+id/adTemplateDescription"
@@ -58,23 +59,40 @@
             android:layout_height="0dp"
             android:layout_margin="5dp"
             android:layout_weight="4"
+            android:fontFamily="@font/magra"
             android:padding="5dp"
             android:textAlignment="textStart"
-            android:textSize="16sp"
-            android:fontFamily="@font/magra"/>
+            android:textSize="16sp" />
 
-        <TextView
-            android:id="@+id/adTemplateDeadline"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:textAlignment="textEnd"
-            android:padding="5dp"
-            android:layout_marginTop="5dp"
             android:layout_weight="2"
-            android:background="#FFFFFF"
-            android:inputType="date"
-            android:textSize="14sp"
-            android:fontFamily="@font/magra"/>
+            android:gravity="center_vertical"
+            android:orientation="horizontal"
+            android:padding="5dp">
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:fontFamily="@font/magra"
+                android:text="Finalitza:"
+                android:textColor="@color/white"
+                android:textSize="14sp" />
+
+            <TextView
+                android:id="@+id/adTemplateDeadline"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:fontFamily="@font/magra"
+                android:inputType="date"
+                android:textAlignment="textEnd"
+                android:textColor="@color/white"
+                android:textSize="14sp" />
+
+        </LinearLayout>
 
 
     </LinearLayout>
